refactored sensitivity and robustness to fix issues with bounds
* added asymmetric & symmetric modes
* implemented "coarse search" using marabou to find epsilon bounds
* implemented binary search to find precise epsilon value within epsilon bounds
* migrated TOTNet from MarabouCore to Marabou APIs
* added "find_counterexample" logic to TOTNet
* added tests to notebook to verify epsilon values returned
* updated robustness & sensitivity shell scripts
* some general code cleanup and consolidation

--- a/verification/robustness.ipynb
+++ b/verification/robustness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "13528 correct samples\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# nnet_path = '../artifacts/models/model_v3.2.0/model.h5'\n",
     "# data_csv = '../data/v3.2.0/test.csv'\n",
@@ -34,15 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "summary: (-0.04372000000000003, 0.21464)\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from robustness import find_local_robustness_boundaries\n",
     "\n",
@@ -55,15 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "-0.0013379999999999993 0.000401\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from robustness import verify_local_robustness_boundaries\n",
@@ -104,15 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "INFO:robustness:all distances valid (34ms)\n{}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# incorrect_samples = [samples[51], samples[209], samples[887], samples[1004], samples[1127], samples[1195], samples[1222], samples[1289]]\n",
     "# p=0.000141\n",
@@ -134,40 +110,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "samples_path = '../logs/samples.csv'\n",
+    "samples = pd.read_csv(samples_path, index_col=0)\n",
+    "samples = [(s[0:25].tolist(), s[25:].tolist()) for s in samples.values][0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stdout",
-     "text": "Counterexample:\n ([0.1955441684233243, -0.18514550681258415, 0.08748283148069608, -0.10871066379491037, 0.170601651361906, 0.057229047730204624, -1.9511492246029085, -0.1927622387556207, 1.7366660411643386, -1.634332383438429, -1.4664279179070772, -0.9321827365593272, -0.063318968186463, -0.540996625704834, -0.10357869369898656, -1.2095775654628251, 0.4576780886462886, -0.026350308813991488, 0.002729866340970037, 0.8038944787315946, -0.0897166470489478, 0.23191927942827092, 0.2921540096345387, 0.20020721536250138, 0.052317835484743114], [-0.790979, 0.121041, -0.254524, 0.100963, 0.0369568])\n"
+     "name": "stderr",
+     "text": "INFO:robustness:searching 9 coarse epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse epsilons b/t 0.001 and 0.009\nINFO:robustness:searching 9 coarse epsilons b/t 0.01 and 0.09\nINFO:robustness:s0 coarse epsilon bounds: (0.01, 0.02)\nINFO:robustness:searching 1000 epsilons b/t 0.01 and 0.01999\nINFO:robustness:s0 epsilon: 0.01606\nINFO:robustness:searching 9 coarse epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse epsilons b/t 0.001 and 0.009\nINFO:robustness:s1 coarse epsilon bounds: (0.005, 0.006)\nINFO:robustness:searching 100 epsilons b/t 0.005 and 0.00599\nINFO:robustness:s1 epsilon: 0.00533\nINFO:robustness:local robustness: (-0.00533, 0.00533)\nINFO:robustness:wrote summary to ../logs/robustness/symmetric/local_summary.csv\nINFO:robustness:wrote detils to ../logs/robustness/symmetric/local_details.csv\nINFO:robustness:searching 9 coarse l_epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse l_epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse l_epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse l_epsilons b/t 0.001 and 0.009\nINFO:robustness:searching 9 coarse l_epsilons b/t 0.01 and 0.09\nINFO:robustness:s0 lower epsilon coarse bounds: (0.04, 0.05)\nINFO:robustness:searching 9 coarse u_epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse u_epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse u_epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse u_epsilons b/t 0.001 and 0.009\nINFO:robustness:searching 9 coarse u_epsilons b/t 0.01 and 0.09\nINFO:robustness:s0 upper epsilon coarse bounds: (0.02, 0.03)\nINFO:robustness:searching 1001 l_epsilons b/t 0.04 and 0.05\nINFO:robustness:s0 lower epsilon: 0.04164\nINFO:robustness:searching 1000 u_epsilons b/t 0.02 and 0.02999\nINFO:robustness:s0 upper epsilon: 0.02475\nINFO:robustness:searching 9 coarse l_epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse l_epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse l_epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse l_epsilons b/t 0.001 and 0.009\nINFO:robustness:s1 lower epsilon coarse bounds: (0.007, 0.008)\nINFO:robustness:searching 9 coarse u_epsilons b/t 1e-06 and 9e-06\nINFO:robustness:searching 9 coarse u_epsilons b/t 1e-05 and 9e-05\nINFO:robustness:searching 9 coarse u_epsilons b/t 0.0001 and 0.0009\nINFO:robustness:searching 9 coarse u_epsilons b/t 0.001 and 0.009\nINFO:robustness:s1 upper epsilon coarse bounds: (0.006, 0.007)\nINFO:robustness:searching 100 l_epsilons b/t 0.007 and 0.00799\nINFO:robustness:s1 lower epsilon: 0.0072\nINFO:robustness:searching 100 u_epsilons b/t 0.006 and 0.00699\nINFO:robustness:s1 upper epsilon: 0.00606\nINFO:robustness:asymm local robustness: (-0.0072, 0.00606)\nINFO:robustness:wrote summary to ../logs/robustness/asymmetric/local_summary.csv\nINFO:robustness:wrote detils to ../logs/robustness/asymmetric/local_details.csv\nSYM RESULTS:  ((-0.00533, 0.00533), [(0.01606, 0.01606), (0.00533, 0.00533)])\nASYM RESULTS:  ((-0.0072, 0.00606), [(0.04164, 0.02475), (0.0072, 0.00606)])\n"
     }
    ],
    "source": [
     "from tot_net import TOTNet\n",
+    "from maraboupy import Marabou, MarabouUtils\n",
+    "from robustness import test_local_robustness, find_epsilon\n",
     "\n",
-    "nnet_path = '../artifacts/models/model_v3.2.0/model.nnet'\n",
-    "sample = ([0.23926416842332435, -0.15174888439921375, -0.12715716851930392, -0.06499066379491034, -0.044038348638094, 0.3313194507444112, 0.4782613721223489, 0.2327204327318842, 0.14517771117862072, 1.3552479661059729, 2.24086091849637, 0.87197434103912, 0.4850011890061274, 0.577800190511209, 1.0597868699177289, -0.39768393057496987, -0.362047643207948, -0.12424305809637555, -0.16772960456016833, -1.778873779785491, -0.04599664704894778, -0.5208565928982523, 0.18448958004575428, 0.5282850327992676, -0.16232216451525688], [0, 0, 1, 0, 0])\n",
-    "n_inputs=25\n",
-    "n_outputs=5\n",
-    "negd, posd = (-0.0024129999999999998, 0.007748000000000001)\n",
+    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
+    "sym_results = test_local_robustness(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, save_samples=True, save_results=True, verbose=2, outdir='../logs/robustness/symmetric')\n",
+    "asym_results = test_local_robustness(nnet_path, samples, e_min=0.0001, e_max=100, e_prec=0.00001, asym=True, save_samples=True, save_results=True, verbose=2, outdir='../logs/robustness/asymmetric')\n",
     "\n",
-    "inputs, outputs = sample\n",
-    "expected_category = outputs.index(max(outputs))\n",
-    "other_categories = [y for y in range(n_outputs) if y != expected_category]\n",
-    "lbounds = [x+negd for x in inputs]\n",
-    "ubounds = [x+posd for x in inputs]\n",
+    "print('SYM RESULTS: ', sym_results)\n",
+    "print('ASYM RESULTS: ', asym_results)\n",
+    "\n",
+    "# 0:0.00231 1:0.01548\n",
+    "\n",
+    "# (-0.005, 0.004)\n",
+    "# epsilon = 0.005\n",
+    "# sample = samples[0]\n",
+    "# inputs, outputs = sample\n",
+    "# net = TOTNet(nnet_path)\n",
+    "# # net.set_lower_bounds([x for x in inputs])\n",
+    "# net.set_upper_bounds([x for x in inputs])\n",
+    "# net.set_lower_bounds([x-epsilon for x in inputs])\n",
+    "# # net.set_upper_bounds([x+epsilon for x in inputs])\n",
+    "# net.set_expected_category(0)\n",
+    "# print(outputs)\n",
+    "# net.solve()\n",
+    "\n",
+    "# net = Marabou.read_nnet(nnet_path)\n",
+    "# eq = Marabou.Equation(Marabou.Equation.LE)\n",
+    "# eq.addAddend(1, net.outputVars[0][1])\n",
+    "# eq.addAddend(-1, net.outputVars[0][0])\n",
+    "# eq.setScalar(0)\n",
+    "# net.addEquation(eq)\n",
+    "# MarabouUtils.addInequality(net, [net.outputVars[0][0], net.outputVars[0][1]], [1, -1], 0)\n",
+    "# net.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tot_net import TOTNet\n",
+    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
     "net = TOTNet(nnet_path)\n",
-    "for oc in other_categories:\n",
-    "    net.reset_query()\n",
-    "    net.set_lower_bounds(lbounds)\n",
-    "    net.set_upper_bounds(ubounds)\n",
-    "    net.set_expected_category(oc)\n",
-    "    vals, _ = net.solve(timeout=10)\n",
-    "    counter_inputs, counter_outputs = vals\n",
-    "    if len(counter_inputs) > 0 or len(counter_outputs) > 0:\n",
-    "        print('Counterexample:\\n', vals)\n",
-    "        break"
+    "# sample = samples[0]\n",
+    "l_epsilon = 0.00533\n",
+    "u_epsilon = 0.00533\n",
+    "results = []\n",
+    "for s,sample in enumerate(samples):\n",
+    "    inputs, outputs = sample\n",
+    "    expected_category = outputs.index(max(outputs))\n",
+    "    print('ec: ', expected_category)\n",
+    "    lbs = [x-l_epsilon for x in inputs]\n",
+    "    ubs = [x+u_epsilon for x in inputs]\n",
+    "    result = net.find_counterexample(lbs, ubs, expected_category, timeout=10)\n",
+    "    results.append(result)\n",
+    "\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from robustness import find_epsilon, find_counterexample\n",
+    "from tot_net import TOTNet\n",
+    "import numpy as np\n",
+    "\n",
+    "nnet_path = '../network/models/v3.2.0/model.nnet'\n",
+    "net = TOTNet(nnet_path)\n",
+    "sample = samples[1]\n",
+    "emin, emax, eprec = 0.0001, 10, 0.0001\n",
+    "\n",
+    "# find_counterexample(net, sample, 0.00230)\n",
+    "\n",
+    "result = find_epsilon(net, sample, emin, emax, eprec)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from maraboupy import Marabou\n",
+    "s = 0\n",
+    "epsilon = 0.017614\n",
+    "inputs, outputs = samples[s]\n",
+    "ninputs = [[x-epsilon for x in inputs]]\n",
+    "pinputs = [[x+epsilon for x in inputs]]\n",
+    "\n",
+    "test_net = Marabou.read_nnet(nnet_path)\n",
+    "nresult = test_net.evaluate(ninputs)\n",
+    "presult = test_net.evaluate(pinputs)\n",
+    "\n",
+    "npred = list(nresult[0]).index(max(nresult[0]))\n",
+    "ppred = list(presult[0]).index(max(presult[0]))\n",
+    "\n",
+    "print(outputs)\n",
+    "print(npred, ppred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from maraboupy import Marabou, MarabouUtils, MarabouCore\n",
+    "from utils import count_decimal_places\n",
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "def test_local_epsilon(nnet_path, sample, eps):\n",
+    "    inputs, outputs = sample\n",
+    "    n_inputs = len(inputs)\n",
+    "    n_outputs = len(outputs)\n",
+    "    exp_cat = outputs.index(max(outputs))\n",
+    "    # exp_cat = 0\n",
+    "    # print('EC', exp_cat)\n",
+    "    other_categories = [y for y,_ in enumerate(outputs) if y != exp_cat]\n",
+    "\n",
+    "    timestamp = lambda: int(time.time() * 1000)\n",
+    "\n",
+    "    result = ('UNSAT', None)\n",
+    "    for oc in other_categories:\n",
+    "        # MarabouUtils.addInequality(net, [net.outputVars[0][oc], net.outputVars[0][exp_cat]], [1, -1], 0)\n",
+    "        net = Marabou.read_nnet(nnet_path)\n",
+    "        for x,val in enumerate(inputs):\n",
+    "            net.setLowerBound(net.inputVars[0][x], val-eps)\n",
+    "            net.setUpperBound(net.inputVars[0][x], val+eps)\n",
+    "        eq = MarabouUtils.Equation(MarabouCore.Equation.LE)\n",
+    "        eq.addAddend(-1, net.outputVars[0][oc])\n",
+    "        eq.addAddend(1, net.outputVars[0][exp_cat])\n",
+    "        eq.setScalar(0)\n",
+    "        net.addEquation(eq)\n",
+    "        vals, _ = net.solve(verbose=0)\n",
+    "        if len(vals) > 0:\n",
+    "            result = ('SAT', vals)\n",
+    "            break\n",
+    "    return result\n",
+    "\n",
+    "# results = []\n",
+    "# sample = samples[0]\n",
+    "# start = timestamp()\n",
+    "    \n",
+    "sample = samples[0]\n",
+    "eps = 0.00231\n",
+    "\n",
+    "result = test_local_epsilon(nnet_path, sample, eps)\n",
+    "print(result)\n",
+    "# nnet_path = '../network/models/v3.2.0/model.nnet'\n",
+    "# timestamp = lambda: int(round(time.time()*1000))\n",
+    "# start = timestamp()\n",
+    "# sample = samples[0]\n",
+    "# precision = 0.000001\n",
+    "# places = count_decimal_places(precision)\n",
+    "# epsilons = [round(e, places) for e in np.arange(0.002, 0.003, 0.000001)]\n",
+    "# for e in epsilons:\n",
+    "#     result, vals = test_local_epsilon(nnet_path, sample, e)\n",
+    "#     print(e, result, vals)\n",
+    "#     if result == 'SAT':\n",
+    "#         break\n",
+    "\n",
+    "# print(f'duration: {timestamp() - start}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from maraboupy import Marabou, MarabouUtils, MarabouCore\n",
+    "from tot_net import TOTNet\n",
+    "\n",
+    "s = 0\n",
+    "eps = 0\n",
+    "inputs, outputs = samples[s]\n",
+    "\n",
+    "net = Marabou.read_nnet(nnet_path)\n",
+    "n_inputs = len(net.inputVars)\n",
+    "n_outputs = len(net.outputVars)\n",
+    "exp_y = outputs.index(max(outputs))\n",
+    "exp_y = 4\n",
+    "\n",
+    "for x in range(n_inputs):\n",
+    "    net.setLowerBound(net.inputVars[0][x], inputs[x])\n",
+    "    net.setUpperBound(net.inputVars[0][x], inputs[x])\n",
+    "\n",
+    "print(net.equList)\n",
+    "\n",
+    "# lines = []\n",
+    "# for x,v in enumerate(inputs):\n",
+    "#     lines.append(f'x{x} <= {v}\\n')\n",
+    "#     lines.append(f'x{x} >= {v}\\n')\n",
+    "# for y in other_categories:\n",
+    "#     lines.append(f'+y{y} -y{exp_y} <= 0\\n')\n",
+    "\n",
+    "# with open('../sandbox/testprop.txt', 'w') as f:\n",
+    "#     f.writelines(lines)\n",
+    "# # print(lines)\n",
+    "\n",
+    "# net = TOTNet(nnet_path, property_path='../sandbox/testprop.txt')\n",
+    "# net.solve()"
    ]
   }
  ],
